# fastled_espidf_s3

./: CMakeLists.txt  build.txt  sdkconfig
FastLEDShim/: CMakeLists.txt  FastLEDArduinoShim.cpp  FastLEDArduinoShim.h
main/: CMakeLists.txt  Kconfig.projbuild  fastled_example.cpp
